--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Parabens Princesa</title>
+        <title>Happy Diwali 2019</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
     </head>
 </html>
@@ -9,23 +9,23 @@
 	<section class="fireworks" id="sec1"></section>
 	<section class="content" id="sec2">
 		<h2>
-			Feliz <c>Aniversario</c>
-			<span>Hoje é o dia da princesa mais bonita do baile</span>
+			Happy <c>Diwali</c>
+			<span>Source Code Link In Video Description</span>
 		</h2>
 	</section>
 	<section class="content" id="sec3">
 		<h2>
-			<c>Obrigado</c> Por existir 
+			<c>Thanks</c> For Watching
 		</h2>
 	</section>
 	<section class="content" id="sec4">
 		<h2>
-			Que todos seus sonhos <c>se realizem :)</c>
+			Stay <c>Tuned :)</c>
 		</h2>
 	</section>
 	<section class="content" id="sec5">
 		<h2>
-			<c>Você é </c>Muito especial
+			<c>Online </c>Tutorials
 		</h2>
 	</section>
 	<section class="content">
