--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Happy Diwali 2019</title>
+        <title>Feliz Aniversario princesa</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
     </head>
 </html>
@@ -9,29 +9,29 @@
 	<section class="fireworks" id="sec1"></section>
 	<section class="content" id="sec2">
 		<h2>
-			Happy <c>Diwali</c>
-			<span>Source Code Link In Video Description</span>
+			Feliz <c>Aniversario</c>
+			<span>Hoje é o dia da princesa mais linda do baile</span>
 		</h2>
 	</section>
 	<section class="content" id="sec3">
 		<h2>
-			<c>Thanks</c> For Watching
+			<c>Obrigado</c> Por existir 
 		</h2>
 	</section>
 	<section class="content" id="sec4">
 		<h2>
-			Stay <c>Tuned :)</c>
+			Que todos seus sonhos <c>se realizem :)</c>
 		</h2>
 	</section>
 	<section class="content" id="sec5">
 		<h2>
-			<c>Online </c>Tutorials
+			<c>Você é </c>Muito especial
 		</h2>
 	</section>
 	<section class="content">
 		<img src="logo.png">
 	</section>
-	<script src="http://code.jquery.com/jquery-3.3.1.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="jquery.fireworks.js"></script>
 	<script type="text/javascript">
 		$('.fireworks').fireworks({ 
