--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<section class="content">
 		<img src="logo.png">
 	</section>
-	<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	<script src="jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="jquery.fireworks.js"></script>
 	<script type="text/javascript">
 		$('.fireworks').fireworks({ 
